Fix #17335: The menu to toggle column visibility is half hidden

--- a/themes/metro/scss/_common.scss
+++ b/themes/metro/scss/_common.scss
@@ -1795,6 +1795,9 @@ form.append_fields_form .tblFooters {
   position: absolute;
   margin-left: 75%;
   right: 0;
+  width: max-content;
+  max-width: 100%;
+  overflow-wrap: break-word;
 
   .lDiv div {
     padding: 0.2em 0.5em 0.2em;
