--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -1597,6 +1597,9 @@ input#auto_increment_opt {
   position: absolute;
   margin-left: 75%;
   right: 0;
+  width: max-content;
+  max-width: 100%;
+  overflow-wrap: break-word;
 
   .lDiv div {
     padding: 0.2em 0.5em 0.2em 0.2em;
